--- a/www/css/global.css
+++ b/www/css/global.css
@@ -138,6 +138,18 @@ em {
 	-ms-transition: 0.52s linear all;
 	transition: 0.52s linear all;
 }
+#museo:before {
+	content: '';
+	display: block;
+	width: 20%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: url(i/mum.png) no-repeat 0 bottom;
+	background-size: contain;
+	opacity: .3;
+}
 #museo p {
 	padding: 0 2%;
 	margin-bottom: .8em;
@@ -150,12 +162,15 @@ em {
 }
 #museo h2 {
 	height: 0;
+	margin-top: 15px;
 	padding-top: 28px;
 	overflow: hidden;
 	background: url(i/regionales.png) no-repeat 50% 50%;
 	background-size: 209px;
 }
 #museo .contacto {
+	position: relative;
+	z-index: 12;
 	font-weight: bold;
 	font-size: .9em;
 	padding: 20px 2%;
@@ -297,11 +312,10 @@ header, footer {
 @media screen and (max-width: 820px) {
 }
 @media screen and (max-width: 790px) {	
-}
-@media screen and (max-width: 680px) {
+	#museo,
 	article {
 		width: 80%;
-		left: 5%;
+		left: 9%;
 	}
 }
 @media screen and (max-width : 500px) {
